Adds buttons and some styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>The Google Ripoff</p>
-        <img src="images/googlelogo.png" alt="The Google Logo">
+        <img class="goog-image" src="images/googlelogo.png" height="92" width="272" alt="The Google Logo">
+        <input class ="search" type="text">
+        <p class="left-b">Left Button</p>
+        <p class="right-b">Right Button</p>
     </body>
 </html>
 
