--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img class="goog-image" src="images/googlelogo.png" height="92" width="272" alt="The Google Logo">
-        <input class ="search" type="text">
-        <p class="left-b">Left Button</p>
-        <p class="right-b">Right Button</p>
+        <div id="center">
+            <img class="goog-image" src="images/googlelogo.png" height="92" width="272" alt="The Google Logo">
+            <input class ="search" type="text">
+            <p class="left-b">Left Button</p>
+            <p class="right-b">Right Button</p>
+        </div>
     </body>
 </html>
 
