--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div id="center">
             <img class="goog-image" src="images/googlelogo.png" height="92" width="272" alt="The Google Logo">
             <input class ="search" type="text">
-            <p class="left-b">Left Button</p>
-            <p class="right-b">Right Button</p>
+            <p class="left-b">Google Search</p>
+            <p class="right-b">I'm Feeling Lucky</p>
         </div>
     </body>
 </html>
