--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="TopNav">
+            <ul>
+                <li class="link">Gmail</li>
+                <li class="link">Images</li>
+                <li class="link">Square</li>
+                <li class="link">Circle</li>
+                <li class="link">Large Circle</li>
+            </ul>
+        </div>
         <div id="center">
             <img class="goog-image" src="images/googlelogo.png" height="92" width="272" alt="The Google Logo">
             <input class ="search" type="text">
