adds div for nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="TopNav">
+        <div id="topnav">
             <ul>
                 <li class="link">Gmail</li>
                 <li class="link">Images</li>
